# text_analytics

./: .dockerignore  .flake8  .gitattributes  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml
.github/: pull_request_template.md
data/: abs_review_eval.csv  ext_review_eval.csv  review_evaluation.csv  test_file_for_app.csv
docker/: app-docker-compose.yaml  dev-docker-compose.yaml
models/: log_reg_best.pkl  naive_bayes_best.pkl  random_forest_best.pkl  sentiment_bert_checkpoint.txt  sentiment_xgb_rf_12_13_13.pkl
models/bert_model_weights/: checkpoint  model_weights_final.data-00000-of-00001  model_weights_final.index
notebooks/: Sentiment Baseline Models.ipynb  abstractive_text_summarization.ipynb  clarence_working_functions.ipynb  cleaning_notebook.ipynb  cleaning_notebook_w_confusion matrix.ipynb  deeplearning.ipynb  extractive_text_summarization.ipynb  extractive_text_summarization_poc.ipynb  final_submission_draft.ipynb  imdb_eda.ipynb  plotting_templates.ipynb  sentiment_models_exploration.ipynb  test_random_forest.ipynb
references/: project_proposal_submission_g4.docx
src/: sentiment_preprocessing.py
text_analytics/: __init__.py  config.py  helpers.py  sentiment_preprocessing.py  text_summariser.py
text_analytics/sentiment_analysis/: bert_finetuned.py  generate_bow.py  logistic_regression.py  naive_bayes.py  random_forest.py  sentiment_bert.py  split_dataset.py  vader.py
text_analytics/text_summarisation/: abs_text_summariser.py  ext_text_summariser.py
