[tool.poetry]
name = "text_analytics"
version = "0.1.0"
description = ""
authors = ["csanry <clarencesan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.4"
sklearn = "^0.0"
spacy = "^3.4.1"
black = "^22.8.0"
flake8 = "^5.0.4"
jupyter = "^1.0.0"
notebook = "^6.4.12"
nltk = "^3.7"
ipython = "^8.4.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.3"
jupyterlab = "^3.4.5"
pre-commit = "^2.20.0"
textblob = "^0.17.1"
wordcloud = "^1.8.2"
transformers = "^4.22.1"
sentencepiece = "^0.1.97"
gensim = "^4.2.0"
torch = "^1.12.1"
rouge = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
